Adiciona tratamento erro

--- a/SwiftPlaces/Resources/en.lproj/Localizable.strings
+++ b/SwiftPlaces/Resources/en.lproj/Localizable.strings
@@ -1,2 +1,4 @@
 "About" = "About";
 "Photos" = "Photos";
+"Ops" = "Ops";
+"An error occurred while processing the data." = "An error occurred while processing the data.";
