--- a/SwiftPlaces/Resources/pt-BR.lproj/Localizable.strings
+++ b/SwiftPlaces/Resources/pt-BR.lproj/Localizable.strings
@@ -1,2 +1,4 @@
 "About" = "Sobre";
 "Photos" = "Fotos";
+"Ops" = "Ops";
+"An error occurred while processing the data." = "Um erro ocorreu ao processar os dados.";
